Header spacing fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-.css-1tmwbjt-Header {
+header {
     margin-bottom: 0 !important;
 }
 a .css-72oyuf {
